[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version="0.16", features=["termion"]}
termion = "1.5"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
chrono = {version = "0.4.19", features=["serde"]}
